--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uv-app",
+  "name": "Nathan-First-App",
   "version": "1.0.0",
   "description": "Ultraviolet instance",
   "type": "module",
